# codex-crc-analysis

./: .gitignore  CLAUDE.md  CODEX_environment.yml  CODEX_gitignore.txt  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: analysis_plan.md  data_dictionary.md
docs/checkpoints/: session_01.md
notebooks/: 01_pipeline_smoke_test.ipynb  01_preprocessing_qc.ipynb
src/codex_crc/: __init__.py  features.py  io.py  neighborhood.py  phenotyping.py  plotting.py  segmentation.py
tests/: test_features.py  test_io.py  test_plotting.py  test_segmentation.py
