[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-crc"
version = "0.1.0"
description = "End-to-end CODEX multiplex IF analysis pipeline for colorectal cancer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Frank Lato" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
  "scikit-image>=0.22",
  "tifffile>=2024.1",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
